<resources>
    <string name="app_name">Demo My Second App</string>
    <string name="message">Welcome to Android!</string>
    <string name="large">Large Text</string>
    <string name="b1">Button1</string>
    <string name="b2">Button2</string>

    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="login">LOGIN</string>
    <string name="cancel">CANCEL</string>

    <string name="rf">Registration Form</string>
    <string name="welcome">Welcome to Adventure Learning Club!</string>
    <string name="line">___________________________________________________________</string>
    <string name="blank">       </string>
    <string name="fn">Full Name  </string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="gender">Gender  </string>
    <string name="g1">Male</string>
    <string name="g2">Female</string>
    <string name="id">Student ID  </string>
    <string name="sch">School  </string>
    <string name="email">E-mail    </string>
    <string name="phone">Phone  </string>
    <string name="reg">Register</string>
</resources>